--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle " data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 Productos
@@ -34,6 +35,13 @@
                             </ul>
                         </li>
                     </ul>
+                    <div class="d-flex" role="separator">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Authentication" asp-action="Login">Inicio Sesión</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
