--- a/WebApp/Views/Authentication/Register.cshtml
+++ b/WebApp/Views/Authentication/Register.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row d-flex align-content-center justify-content-center p-3">
-    <div class="col-md-5 card p-3">
+    <div class="col-md-6 card p-3">
         <h2 class="text-center text-info">Registro</h2>
         <form action="Register" method="post">
             <div asp-validation-summary="ModelOnly"></div>
@@ -21,6 +21,11 @@
                 </div>
             </div>
             <div class="mb-1">
+                <label asp-for="Username"></label>
+                <input type="text" class="form-control" asp-for="Username">
+                <span class="text-danger" asp-validation-for="Username"></span>
+            </div>
+            <div class="mb-1">
                 <label asp-for="Email"></label>
                 <input type="email" class="form-control" asp-for="Email">
                 <span class="text-danger" asp-validation-for="Email"></span>
@@ -28,7 +33,7 @@
             <div class="mb-1">
                 <label asp-for="Password"></label>
                 <input type="password" class="form-control" asp-for="Password">
-                <span class="text-danger" asp-validation-for="Email"></span>
+                <span class="text-danger" asp-validation-for="Password"></span>
             </div>
             <div class="mb-1">
                 <label asp-for="ConfirmPassword"></label>
@@ -43,3 +48,9 @@
         </form>
     </div>
 </div>
+
+@section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
