--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -36,11 +36,7 @@
                         </li>
                     </ul>
                     <div class="d-flex" role="separator">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="Authentication" asp-action="Login">Inicio Sesión</a>
-                            </li>
-                        </ul>
+                        <partial name="_LoginPartial" />
                     </div>
                 </div>
             </div>
