Refactor authentication and creation VerifySession Filter

--- a/WebApp/Views/Shared/_LinkPartial.cshtml
+++ b/WebApp/Views/Shared/_LinkPartial.cshtml
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Identity;
 @inject SignInManager<Domain.Models.User> signManger;
+@if(signManger.IsSignedIn(User)){
 <li class="nav-item">
     <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 </li>
@@ -14,3 +15,14 @@
         <li><a class="dropdown-item" asp-area="" asp-controller="Category" asp-action="Index">Categorias</a></li>
     </ul>
 </li>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        Usuarios
+    </a>
+    <ul class="dropdown-menu">
+        <li>
+            <a class="dropdown-item" asp-controller="Users" asp-action="Register">Registro</a>
+        </li>
+    </ul>
+</li>
+}
