Creation seed to role and user

--- a/WebApp/Views/Shared/_LinkPartial.cshtml
+++ b/WebApp/Views/Shared/_LinkPartial.cshtml
@@ -23,6 +23,9 @@
         <li>
             <a class="dropdown-item" asp-controller="Users" asp-action="Register">Registro</a>
         </li>
+        <li>
+            <a class="dropdown-item" asp-controller="Users" asp-action="Index">Users</a>
+        </li>
     </ul>
 </li>
 }
