--- a/WebApp/Views/Shared/_LinkPartial.cshtml
+++ b/WebApp/Views/Shared/_LinkPartial.cshtml
@@ -26,6 +26,9 @@
         <li>
             <a class="dropdown-item" asp-controller="Users" asp-action="Index">Users</a>
         </li>
+        <li>
+            <a class="dropdown-item" asp-controller="Role" asp-action="Index">Roles</a>
+        </li>
     </ul>
 </li>
 }
