--- a/WebApp/Views/Role/index.cshtml
+++ b/WebApp/Views/Role/index.cshtml
@@ -1,5 +1,7 @@
 @using Domain.Models;
 @using Persistence.Data;
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<User> signInManager
 @model Pagination<Role>;
 @{
     ViewData["Title"] = "Roles";
@@ -19,10 +21,11 @@
         </div>
     </div>
 }
+@if(User.IsInRole("Root")){
 <p>
-    <a asp-action="Register" asp-controller="Role" class="btn btn-success">Nuevo Rol</a>
+    <a asp-action="New" asp-controller="Role" class="btn btn-success">Nuevo Rol</a>
 </p>
-
+}
 <div class="table-responsive-md">
     <table class="table">
             <thead class="table-light">
@@ -36,10 +39,13 @@
                             @Html.DisplayFor(modelItem=>item.Name)
                         </th>
                         <th>
+                            
                             <div class="btn-group btn-group-sm">
-                                <a href="#" class="btn btn-primary btn-sm">Ver</a>
+                                <a asp-controller="Role" asp-action="Show" asp-route-id="@item.Id"  class="btn btn-primary btn-sm">Ver</a>
+                                @if(User.IsInRole("Root")){
                                 <a href="#" class="btn btn-warning btn-sm">Editar</a>
                                 <a href="#" class="btn btn-danger btn-sm"  >Eliminar</a>
+                                }
                             </div>
                         </th>
                     </tr>
