--- a/WebApp/Views/Role/edit.cshtml
+++ b/WebApp/Views/Role/edit.cshtml
@@ -1,7 +1,7 @@
 @using Domain.Dto.Role
-@model RoleInDto;
+@model RoleEditDto
 @{
-    ViewData["Title"] = "Registro";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -18,8 +18,9 @@
 <br/>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Store">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Update">
+            <div asp-validation-summary="ModelOnly"></div>
+            <input type="hidden" asp-for="Id">
             <div class="form-group">
                 <label asp-for="Name"class="control-label"></label>
                 <input asp-for="Name" class="form-control" type="text"/>
