--- a/WebApp/Views/Role/index.cshtml
+++ b/WebApp/Views/Role/index.cshtml
@@ -43,7 +43,7 @@
                             <div class="btn-group btn-group-sm">
                                 <a asp-controller="Role" asp-action="Show" asp-route-id="@item.Id"  class="btn btn-primary btn-sm">Ver</a>
                                 @if(User.IsInRole("Root")){
-                                <a href="#" class="btn btn-warning btn-sm">Editar</a>
+                                <a asp-controller="Role" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar</a>
                                 <a href="#" class="btn btn-danger btn-sm"  >Eliminar</a>
                                 }
                             </div>
