--- a/WebApp/Views/Role/index.cshtml
+++ b/WebApp/Views/Role/index.cshtml
@@ -44,7 +44,7 @@
                                 <a asp-controller="Role" asp-action="Show" asp-route-id="@item.Id"  class="btn btn-primary btn-sm">Ver</a>
                                 @if(User.IsInRole("Root")){
                                 <a asp-controller="Role" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar</a>
-                                <a href="#" class="btn btn-danger btn-sm"  >Eliminar</a>
+                                <a asp-controller="Role" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"  >Eliminar</a>
                                 }
                             </div>
                         </th>
