--- a/WebApp/Views/Category/show.cshtml
+++ b/WebApp/Views/Category/show.cshtml
@@ -22,3 +22,7 @@
             <hr/>
         </div>    
     </div>
+<br/>
+<p>
+    <a class="btn" asp-controller="Category" asp-action="Index">Regresar</a>
+</p>
