--- a/WebApp/Views/Users/Index.cshtml
+++ b/WebApp/Views/Users/Index.cshtml
@@ -1,5 +1,8 @@
 @using Domain.Models;
-@model Persistence.Data.Pagination<User>;
+@using Persistence.Data;
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<User> signInManager
+@model Pagination<User>
 @{
     ViewData["Title"] = "Usuarios";
     var previousWeakened = !Model.previousPages ? "disabled":"";
@@ -17,9 +20,11 @@
         </div>
     </div>
 }
-<p>
-    <a asp-action="Register" asp-controller="Users" class="btn btn-success">Registrar Nuevo Usuario</a>
-</p>
+@if(User.IsInRole("Root")||User.IsInRole("Admin")){
+    <p>
+        <a asp-action="Register" asp-controller="Users" class="btn btn-success">Registrar Nuevo Usuario</a>
+    </p>
+}
 <div class="table-responsive-md">
     <table class="table">
         <thead class="table-light">
@@ -44,9 +49,11 @@
                     <th>@Html.DisplayFor(modelItem=>item.Email)</th>
                     <th>
                         <div class="btn-group btn-group-sm">
-                            <a href="#" class="btn btn-primary btn-sm">Ver</a>
-                            <a href="#" class="btn btn-warning btn-sm">Editar</a>
-                            <a href="#" class="btn btn-danger btn-sm"  >Eliminar</a>
+                            <a asp-controller="Users" asp-action="Show" asp-route-id="@item.Id"  class="btn btn-primary btn-sm">Ver</a>
+                            @if(User.IsInRole("Root")){
+                            <a asp-controller="Role" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar</a>
+                            <a asp-controller="Role" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"  >Eliminar</a>
+                            }
                         </div>
                     </th>
                 </tr>
