--- a/WebApp/Views/Users/Index.cshtml
+++ b/WebApp/Views/Users/Index.cshtml
@@ -50,8 +50,11 @@
                     <th>
                         <div class="btn-group btn-group-sm">
                             <a asp-controller="Users" asp-action="Show" asp-route-id="@item.Id"  class="btn btn-primary btn-sm">Ver</a>
+                            @if(User.IsInRole("Root")||User.IsInRole("Admin")){
+                            <a asp-controller="Users" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar</a>
                             @if(User.IsInRole("Root")){
-                            <a asp-controller="Role" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar</a>
+                                <a asp-controller="Role" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar Role</a>
+                            }
                             <a asp-controller="Role" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"  >Eliminar</a>
                             }
                         </div>
